--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -104,6 +104,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.lg-content {
+  top: 0 !important;
+  bottom: 0 !important;
+}
 .lg-sub-html {
   h4 {
     font-size: 12px;
@@ -118,9 +122,9 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  border: 1px solid var(--color-secondary);
-  background-color: var(--color-secondary);
-  background-image: url("../../images/use/ic-arrow-white.svg");
+  border: 1px solid var(--color-white);
+  background-color: var(--color-white);
+  background-image: url("../../images/use/ic-arrow-brown.svg");
   background-repeat: no-repeat;
   background-position: center;
   transition: all 0.4s ease;
@@ -130,9 +134,9 @@
     top: unset;
   }
   &:hover {
-    border: 1px solid var(--color-white);
-    background-color: var(--color-white);
-    background-image: url("../../images/use/ic-arrow-brown.svg");
+    border: 1px solid var(--color-secondary);
+    background-color: var(--color-secondary);
+    background-image: url("../../images/use/ic-arrow-white.svg");
   }
   &::before {
     content: "";
@@ -167,17 +171,18 @@
     height: 60px;
     padding: 0;
     border-radius: 50%;
-    border: 1px solid var(--color-secondary);
-    background-color: var(--color-secondary);
-    background-image: url("../../images/use/ic-close-white.svg");
+    border: 1px solid var(--color-white);
+    background-color: var(--color-white);
+    background-image: url("../../images/use/ic-close-brown.svg");
     background-repeat: no-repeat;
     background-position: center;
     transition: all 0.4s ease;
     right: 80px;
 
     &:hover {
-      background-color: var(--color-white);
-      background-image: url("../../images/use/ic-close-brown.svg");
+      border: 1px solid var(--color-secondary);
+      background-color: var(--color-secondary);
+      background-image: url("../../images/use/ic-close-white.svg");
     }
     &::after {
       content: "";
@@ -191,9 +196,14 @@
   display: none;
 }
 .lg-components {
-  bottom: 13%;
-  @media (max-width: 991px) {
-    bottom: 30%;
-  }
+  position: relative;
+
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 64px;
 }
+
 // end syle lightgallery
