--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -75,7 +75,7 @@ footer {
     &-social {
       display: flex;
       align-items: center;
-      justify-content: flex-end;
+      justify-content: flex-start;
       gap: 16px;
       margin-top: 16px;
 
@@ -121,6 +121,7 @@ footer {
       align-items: center;
       justify-content: center;
       gap: 0 40px;
+      margin-top: 16px;
 
       a {
         min-width: max-content;
@@ -132,6 +133,7 @@ footer {
         gap: 8px;
         align-items: center;
         justify-content: center;
+        margin-top: 0;
       }
     }
 
