--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -148,7 +148,7 @@
   }
 }
 .lg-next {
-  right: 180px;
+  right: 80px;
   @media (max-width: 991px) {
     right: calc(50% - 40px);
     transform: translateX(50%) translateY(0%);
@@ -156,7 +156,7 @@
 }
 .lg-prev {
   transform: translateY(-50%) scaleX(-1);
-  left: 180px;
+  left: 80px;
   @media (max-width: 991px) {
     left: calc(50% - 40px);
     transform: translateX(-50%) translateY(0%) scaleX(-1);
@@ -176,18 +176,18 @@
     height: 60px;
     padding: 0;
     border-radius: 50%;
-    border: 1px solid var(--color-white);
-    background-color: var(--color-white);
-    background-image: url("../../images/use/ic-close-brown.svg");
+    border: 1px solid var(--color-secondary);
+    background-color: var(--color-secondary);
+    background-image: url("../../images/use/ic-close-white.svg");
     background-repeat: no-repeat;
     background-position: center;
     transition: all 0.4s ease;
     right: 80px;
 
     &:hover {
-      border: 1px solid var(--color-secondary);
-      background-color: var(--color-secondary);
-      background-image: url("../../images/use/ic-close-white.svg");
+      border: 1px solid var(--color-white);
+      background-color: var(--color-white);
+      background-image: url("../../images/use/ic-close-brown.svg");
     }
     &::after {
       content: "";
@@ -195,6 +195,7 @@
   }
 }
 .lg-image {
+  max-width: 845px;
   aspect-ratio: 16 / 9;
 }
 .lg-counter {
