--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -2,7 +2,20 @@
   width: 100%;
   position: relative;
   height: 640px;
-
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      360deg,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.331067) 31.2%,
+      #000000 94.25%
+    );
+  }
   &.has-slider {
     height: 100dvh;
   }
